# hexagonal-architecture

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/hexagonal_architecture/: main.py
src/hexagonal_architecture/adapters/auth/: reverse_password.py  space_password.py
src/hexagonal_architecture/adapters/mock/: in_memory_repositories_user.py
src/hexagonal_architecture/app/fundamentals/: dependency_inversion.py  polimorfismo.py
src/hexagonal_architecture/app/fundamentos/: dependency_inversion.py  polimorfismo.py
src/hexagonal_architecture/app/menu/: fundamentals.py  fundamentos.py  main.py  principal.py  user.py
src/hexagonal_architecture/app/user/: register.py
src/hexagonal_architecture/app/utils/: terminal.py
src/hexagonal_architecture/core/fundamentals/: carro.py  civic.py  corrida.py  ferrari.py
src/hexagonal_architecture/core/fundamentos/: corrida.py  fusca.py
src/hexagonal_architecture/core/shared/: erros.py  id.py  use_case.py
src/hexagonal_architecture/core/user/models/: user.py
src/hexagonal_architecture/core/user/services/: criptograph_provider.py  in_memory_repositories_user.py  register.py  user_repository.py
src/hexagonal_architecture/utils/: output_interface.py
