[project]
name = "hexagonal-architecture"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergio Pereira Junior",email = "pereisergio@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "windows-curses (>=2.4.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "hexagonal_architecture", from = "src"}]

[tool.poetry.scripts]
start = "hexagonal_architecture.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"